<resources>
    <string name="app_name">ShareMyFi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="TXT_OK">Ok</string>
    <string name="TXT_YES">Yes</string>
    <string name="TXT_NO">No</string>
    <string name="TXT_ACTION_DELETE_ITEM">Delete</string>
    <string name="TXT_ACTION_ADD_ITEM">Add</string>
    <string name="TXT_ACTION_ADD_WIFI">Add Wifi Information</string>
    <string name="TXT_ACTION_EDIT_WIFI">Edit Wifi Information</string>
    <string name="TXT_ADDED_COLON">Added:</string>
    <string name="TXT_SAVED_COLON">Saved:</string>
    <string name="TXT_ADD_FAILED">Save failed. Try again.</string>
    <string name="TXT_ADD_FAILED_INVALID_SSID_OR_PASSWORD">Save failed. Invalid SSID or password.</string>
    <string name="TXT_ADD_FAILED_TITLE">Error</string>
    <string name="TXT_SSID_COLON">SSID:</string>
    <string name="TXT_SSID_HINT">Enter Wifi name</string>
    <string name="TXT_PASSWORD_COLON">Password:</string>
    <string name="TXT_PASSWORD_HINT">Enter Password</string>
    <string name="TXT_DELETE_ITEM_PROMPT_TITLE">Are you sure?</string>
    <string name="TXT_DELETE_ITEM_PROMPT">This will erase the selected items and cannot be restored</string>

    <string name="title_activity_splash">ShareMyFi</string>
    <string name="TXT_SCAN_CODE">Scan</string>
    <string name="TXT_SHARE_CODE">Share</string>
    <string name="TXT_MANAGE">Manage</string>
</resources>
