<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kolo.karl.sharemyfi.AddWifi"
    tools:showIn="@layout/activity_add_wifi">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_field_height"
        android:id="@id/ID_SSID_GROUP">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TXT_SSID_COLON"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@id/ID_SSID_INPUT"
            android:layout_weight="1"
            android:autoText="false"
            android:enabled="true"
            android:focusable="true"
            android:hint="@string/TXT_SSID_HINT"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/text_input_left_margin"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_field_height"
        android:id="@id/ID_PASS_GROUP">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TXT_PASSWORD_COLON"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@id/ID_PASS_INPUT"
            android:layout_weight="1"
            android:autoText="false"
            android:enabled="true"
            android:focusable="true"
            android:hint="@string/TXT_PASSWORD_HINT"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/text_input_left_margin"
            android:inputType="textPassword" />
    </LinearLayout>

</LinearLayout>
